WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
229411
editing/selection/ios/select-text-in-existing-selection.html fails on iOS 15
https://bugs.webkit.org/show_bug.cgi?id=229411
Summary
editing/selection/ios/select-text-in-existing-selection.html fails on iOS 15
Wenson Hsieh
Reported
2021-08-23 09:40:48 PDT
rdar://80385434
Attachments
Patch
(20.09 KB, patch)
2021-08-23 10:32 PDT
,
Wenson Hsieh
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Try to fix non-internal iOS build
(21.39 KB, patch)
2021-08-23 10:55 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2021-08-23 10:32:28 PDT
Comment hidden (obsolete)
Created
attachment 436209
[details]
Patch
Wenson Hsieh
Comment 2
2021-08-23 10:55:04 PDT
Created
attachment 436210
[details]
Try to fix non-internal iOS build
Wenson Hsieh
Comment 3
2021-08-23 13:47:24 PDT
Comment on
attachment 436210
[details]
Try to fix non-internal iOS build Thanks for the review!
EWS
Comment 4
2021-08-23 13:52:50 PDT
Committed
r281468
(
240847@main
): <
https://commits.webkit.org/240847@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 436210
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug